# api-module-template

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/routes/: __init__.py  health.py  wines.py
core/db/: db.py  init_db.py  seed.py  seed_data.py
domain/wine/: wine_repository.py  wine_service.py
domain/wine/entities/: wine.py
domain/wine/models/: __init__.py  rating.py  rating_schema.py  wine.py  wine_schema.py
domain/wine/schemas/: __init__.py  rating_schema.py  wine_schema.py
jobs/: batch.py  sample_job.py
jobs/parameters/: sample_job_param.py
tests/database/: test_seed.py
tests/domain/: conftest.py
tests/domain/repositories/: conftest.py  test_wine_repository.py
tests/domain/services/: conftest.py  test_wine_service.py
