[tool.poetry]
name = "api-module-template"
version = "0.0.1"
description = ""
authors = ["corn <dalcon10280@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
greenlet = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
#trio_mode = false
